[gd_scene load_steps=3 format=3 uid="uid://2mp3b1rhugjg"]

[ext_resource type="Script" uid="uid://c3scxcji4orif" path="res://Scripts/pause.gd" id="1_44hg8"]
[ext_resource type="Texture2D" uid="uid://c0w51yedhoe30" path="res://icon.svg" id="2_bx65v"]

[node name="Pause" type="Node2D"]
process_mode = 3
script = ExtResource("1_44hg8")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.415686)
position = Vector2(-7.00003, -2.5)
scale = Vector2(9.04688, 5.05469)
texture = ExtResource("2_bx65v")

[node name="Pause" type="Label" parent="."]
offset_left = -78.0
offset_top = -236.0
offset_right = 78.0
offset_bottom = -167.0
theme_override_font_sizes/font_size = 50
text = "PAUSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Continue" type="Button" parent="."]
offset_left = -91.0
offset_top = -108.0
offset_right = 100.0
offset_bottom = -46.0

[node name="Label" type="Label" parent="Continue"]
layout_mode = 0
offset_right = 189.0
offset_bottom = 60.0
text = "CONTINUE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Options" type="Button" parent="."]
offset_left = -91.0
offset_top = -11.0
offset_right = 100.0
offset_bottom = 51.0

[node name="Label" type="Label" parent="Options"]
layout_mode = 0
offset_right = 189.0
offset_bottom = 60.0
text = "OPTIONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitLevel" type="Button" parent="."]
offset_left = -91.0
offset_top = 89.0
offset_right = 100.0
offset_bottom = 151.0

[node name="Label" type="Label" parent="ExitLevel"]
layout_mode = 0
offset_right = 189.0
offset_bottom = 60.0
text = "EXIT LEVEL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CountDown" type="Label" parent="."]
offset_left = -136.0
offset_top = -126.0
offset_right = 134.0
offset_bottom = 147.0
theme_override_font_sizes/font_size = 200
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_up" from="Continue" to="." method="Continue"]
[connection signal="button_up" from="Options" to="." method="options"]
[connection signal="button_up" from="ExitLevel" to="." method="GoBackToLab"]
[connection signal="timeout" from="Timer" to="." method="StartAgain"]
